[gd_scene load_steps=5 format=3 uid="uid://bhuby6f18t4gv"]

[ext_resource type="Script" path="res://v1/Match/Player/Discard/DiscardCardScene.gd" id="1_q3j2k"]
[ext_resource type="PackedScene" uid="uid://b123mvlorg2ki" path="res://v1/Card/CardScene.tscn" id="2_h7t8f"]
[ext_resource type="Script" path="res://v1/Card/Behavior/DiscardPileCardBehavior.gd" id="3_hlmrm"]

[sub_resource type="Resource" id="Resource_cn2gb"]
resource_local_to_scene = true
script = ExtResource("3_hlmrm")
DefaultColor = Color(0, 0, 0, 0)
PickColor = Color(0.533333, 0, 0, 1)
PickHoverColor = Color(0.937255, 0, 0, 1)

[node name="DiscardCardScene" type="Control"]
custom_minimum_size = Vector2(290, 400)
layout_mode = 3
anchor_right = 0.113
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3j2k")

[node name="Card" parent="." instance=ExtResource("2_h7t8f")]
unique_name_in_owner = true
position = Vector2(145, 200)
scale = Vector2(0.4, 0.4)
Behavior = SubResource("Resource_cn2gb")

[connection signal="gui_input" from="." to="." method="OnGuiInput"]
[connection signal="mouse_entered" from="." to="." method="OnMouseEntered"]
[connection signal="mouse_exited" from="." to="." method="OnMouseExited"]
